added swagger and fix various stuff
